home-page styling

--- a/app/assets/stylesheets/application1.css
+++ b/app/assets/stylesheets/application1.css
@@ -10,11 +10,38 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *= require_tree .
- *= require_self
+ *= require_self    
  */
 
- .navbar {
-
-    background-color: #FDF6EA !important;
-    
+ html,
+ body {
+   height: 100%;
+ }
+  
+ #page-content {
+    flex: 1 0 auto;
+  }
+.navbar {
+    background-color:black; 
 }
+
+#logo {
+    float: left;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
+  }
+  
+  #home-container{
+    margin-top: 25px;
+  }
+
+  .jumbotron{
+    background-image: url("home-img");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 425px;
+  }
