--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,12 +1,25 @@
-<div id="<%= dom_id article %>">
-  <p>
-    <strong>Title:</strong>
-    <%= article.title %>
-  </p>
 
-  <p>
-    <strong>Description:</strong>
-    <%= article.description %>
-  </p>
 
+<h2 class="text-center mt-4"><%= @article.title%></h2>
+<div class="container">
+<div class="row justify-content-md-center">
+<div class="col-8 mt-5">
+<div class="card text-center shadow-lg mb-5 bg-body rounded">
+  <div class="card-header fst-italic">
+    By Ali Hassan
+  </div>
+  <div class="card-body">
+    <div class="card-text text-start"><%= simple_format(@article.description)%></div>
+    <%= link_to "Edit", edit_article_path(@article), class: "btn btn-outline-info" %>
+    <%= link_to "Delete", article_path(@article), class: "btn btn-outline-danger",
+                                           data: {turbo_method: :delete } %>
+  </div>
+  <div class="card-footer text-muted">
+    Created Ago:<%= time_ago_in_words(@article.created_at)%>
+    Updated Ago:<%= time_ago_in_words(@article.updated_at)%>
+  </div>
 </div>
+</div>
+</div>
+</div>
+
