--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
 
   <body class="d-flex flex-column">
     <%= render "layouts/navbar" %>  
+    <div id="page-content">
     <%= yield %>
+    </div>
+    <%= render "layouts/footer" %>
   </body>
 </html>
